# RestAPI-plagiarism

./: .env.example  .gitignore  Makefile  PROFILING.md  README.md  api.Dockerfile  db.Dockerfile  docker-compose.dev.yml  docker-compose.profiling.yml  docker-compose.test.yml  docker-compose.yml  file_4.py  file_4_type4_1.py  package-lock.json  pyproject.toml  pytest.ini  setup.sh  test_auth.py  test_redis.py  test_run.json  test_smart_progress.json  test_smart_small.json  worker.Dockerfile
cli/: analyzer.py  analyzer.py.backup  cli.py
database/: alembic.ini  config.py  database.py  requirements.txt  start_bd.sh
docs/: REDIS_IMPLEMENTATION.md
frontend/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.ts
plagiarism_core/: __init__.py  analyzer.py  analyzer.py.bak  ast_hash.py  canonicalizer.py  fingerprints.py  line_matcher.py  matcher.py  models.py  plagiarism_detector.py  similarity.py
plagiarism_detector/: __init__.py  cli.py  config.py  engine.py  models.py
rabbitmq-config/: rabbitmq.conf
scripts/: profile-api.sh  profile-top.sh  profile-worker.sh  quick-cmd.sh  setup-complete.sh  test-integration.sh
shared/: interfaces.py  models.py
src/: app.py  auth.py  config.py  constants.py  database.py  dependencies.py  logging_config.py  metrics.py  rabbit.py  redis_client.py  requirements.txt  router.py  s3_storage.py  websocket_manager.py
tests/: .env.test  TEST_STANDARDS.md  bench_inmemory.py  bench_worker.py  benchmark_analyzer.py  benchmark_comparison.py  compare_metrics.py  conftest.py  db_benchmark.py  plagiarism_scenarios.py  profile_analyzer.py  profile_upload.py  test_analyzer.py  test_api.py  test_assignments.py  test_ast_hash.py  test_auth_service.py  test_body_signatures.py  test_canonicalizer.py  test_detector_smoke.py  test_identifiers.py  test_inverted_index.py  test_matcher.py  test_merge_helpers.py  test_multilanguage_detection.py  test_rabbit.py  test_schemas.py  test_similarity.py  test_winnow.py  verify_xxhash.py
worker/: config.py  crud.py  database.py  dependencies.py  exceptions.py  interfaces.py  main.py  (+10 more)
(+339 files in other folders)
