[project]
name = "plagiarism"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "redis==5.0.1",
    "redis-asyncio==0.2.2",
    "aio-pika==9.6.2",
    "boto3-stubs[s3]==1.36.14",
    "psycopg2-binary==2.9.10",
    "alembic==0.24.0",
    "python-multipart==0.0.17",
    "prometheus-client==0.21.0",
    "python-json-logger==2.0.7",
    "httpx==0.27.2",
    "structlog==24.4.0",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "ruff==0.8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "shared", "worker", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "worker", "cli", "shared"]
extend-exclude = ["tests/plagiarism/type1", "tests/plagiarism/type2", "tests/plagiarism/type3", "tests/plagiarism/type4"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "W",   # warnings
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F841"]
"migrations/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
